# libgeojson

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  Doxyfile  LICENSE  README.md  README_8md.html  annotated.html  annotated_dup.js  classes.html  conanfile.py  dir_5cd55b9e89b1fc08bb22552e0ea7a3b5.html  dir_5cd55b9e89b1fc08bb22552e0ea7a3b5.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  hierarchy.html  hierarchy.js  index.html  libgeojson_8h.html  libgeojson_8h.js  libgeojson_8h_source.html  md_README.html  menudata.js  namespacegeojson.html  namespacegeojson.js  namespacegeojson_1_1detail.html  namespacegeojson_1_1detail.js  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  pages.html  structgeojson_1_1detail_1_1is__invocable.html  structgeojson_1_1detail_1_1is__invocable__r.html
.github/: README.md  code-quality.yml
.github/workflows/: README.md  ci.yml  code-quality.yml  documentation.yml
cmake/: Dependencies.cmake  Install.cmake  StaticAnalysis.cmake  libgeojsonConfig.cmake.in
include/libgeojson/: libgeojson.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  classes_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  searchdata.js  typedefs_0.js
tests/: CMakeLists.txt  Predicates.h  unit_tests.cpp
tests/cmake_export_test/: CMakeLists.txt  main.cpp
